@@ -369,6 +369,27 @@
   </tr>
 
   <tr>
+    <td>
+      <p align="center">
+	<img src="http://www.suse.com/images/suse_logo.png">
+      </p>
+    </td>
+    <td>
+      SuSE
+    </td>
+    <td>
+  9.0
+    </td>
+    <td>
+      <b>Download
+	<a href="ftp://ftp.suse.com/pub/suse/i386/9.0/suse/i586/lilypond-1.8.1-59.i586.rpm">lilypond</a>,
+	<a href="ftp://ftp.suse.com/pub/suse/i386/9.0/suse/i586/lilypond-documentation-1.8.1-59.i586.rpm">documentation</a></b>
+    </td>
+    <td>1.6.6</td>  
+    <td>SuSE Gmbh.</td>
+  </tr>
+  
+  <tr>
     <td><p align="center"><img src="@IMAGES@slackware-logo.png"></p></td>
     <td>
       Slackware 
